<resources>
    <string name="app_name">LinkUTM</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_user_main">UserMainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Valores para los menús superiores derechos -->
    <string name="iniciar_Sesion">Iniciar sesión</string>
    <string name="cerrar_Sesion">Cerrar sesión</string>

    <!-- Valores para la sección de LogIn -->
    <string name="matricula">Matrícula</string>
    <string name="contraseña">Contraseña</string>
    <string name="btn_iniciar">Iniciar</string>
    <string name="btn_cancelar">Crear una cuenta</string>
    <string name="content_img">Iniciar sesión</string>

    <!-- Valores para la sección de Registro -->
    <string name="btn_canelar1">Cancelar</string>
    <string name="btn_registro">Registrarse</string>

    <!-- Valores para la sección de Términos y condiciones -->
    <string name="titulo_termns">Términos y condiciones | LinkUTM</string>
    <string name="terms_sub"><u>Términos y condiciones</u></string>
    <string name="contenido_terms">
        "Eres propietario de todo lo que compartes en LinkUTM, Asimismo:"
        "Los usuarios de LinkUTM proporcionan sus nombres y datos reales, y necesitamos tu colaboración para que siga siendo así."
        "Estos son algunos de los compromisos que aceptas en relación con el registro y el mantenimiento de la seguridad de tu cuenta:"
        "1.- No proporcionarás información falsa para los usuario de LinkUTM, ni utilizarás el medio para molestar o agredir a otros usuarios"
        "2.- La administración de LinkUTM puede inhabilitar tu cuenta, si es así, no crearás otra sin nuestra autorización"
        "3.- Mantendrás tu información de contacto exacta y actualizada"
        "4.- No compartirás tu contraseña, no dejarás que otra persona acceda a tu cuenta, ni harás nada que pueda poner en peligro la seguridad de tu cuenta."
        "5.- Si publicas información falsa, nos reservamos el derecho de eliminarla o en caso de reincidencia, inhabilitaremos tu cuenta si lo consideramos oportuno"
        "Disposiciones si se incumplen estos compromisos"
        "Nos reservamos el derecho de eliminar el contenido que publiques, si este cuenta con información falsa, contenido sexual explícito,"
        "agresiones a terceros y/o cualquier actividad que ponga en peligro tu seguridad o la de otros usuarios de LinkUTM"
        "Conflictos:"
        "INTENTAMOS MANTENER LINKUTM EN FUNCIONAMIENTO, SIN ERRORES Y SEGURO, PERO LO UTILIZAS BAJO TU PROPIA RESPONSABILIDAD.
        "PROPORCIONAMOS LINKUTM TAL CUAL, SIN GARANTÍA ALGUNA EXPRESA O IMPLÍCITA, INCLUIDAS, ENTRE OTRAS, LAS GARANTÍAS DE COMERCIABILIDAD,"
        "ADECUACIÓN A UN FIN PARTICULAR Y NO INCUMPLIMIENTO. NO GARANTIZAMOS QUE LINKUTM SEA SIEMPRE SEGURO O ESTÉ LIBRE DE ERRORES,"
        "NI QUE FUNCIONE SIEMPRE SIN INTERRUPCIONES, RETRASOS O IMPERFECCIONES. LINKUTM NO SE RESPONSABILIZA DE LAS ACCIONES, EL CONTENIDO,"
        "LA INFORMACIÓN O LOS DATOS DE TERCEROS, Y POR LA PRESENTE NOS DISPENSAS A NOSOTROS, NUESTROS DIRECTIVOS, EMPLEADOS Y AGENTES DE CUALQUIER DEMANDA O DAÑOS,"
        "CONOCIDOS O DESCONOCIDOS, DERIVADOS DE CUALQUIER DEMANDA QUE TENGAS INTERPUESTA CONTRA TALES TERCEROS O DE ALGÚN MODO RELACIONADOS CON ESTA."

        UTILIZA LINKUTM CON RESPONSABILIDAD, ES UNA APLICACIÓN PARA MANTENERNOS COMUNICADOS
    </string>

    <string name="iniciar_Horario">Iniciar horario</string>
    <string name="title_activity_detalles_actividades">DetallesActividades</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>
