<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_log_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fsociety.linkutmbetty.LogInActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="220dp"
                app:srcCompat="@drawable/usuario"
                android:contentDescription="@string/iniciar_Sesion"
                android:id="@+id/imageView2" />

            <EditText
                android:id="@+id/txtMatricula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/matricula"
                android:textColor="@color/colorPrimary"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/contraseña"
                android:textColor="@color/colorPrimary"
                android:ems="10"
                android:id="@+id/txtContraseña" />

            <Button
                android:id="@+id/btnIniciar"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="85dp"
                android:layout_marginRight="85dp"
                android:text="@string/btn_iniciar"
                android:textColor="#fff"
                android:textSize="20sp"
                android:backgroundTint="@color/colorAccent"
                android:textAllCaps="false"/>

            <Button
                android:text="@string/btn_cancelar"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="85dp"
                android:layout_marginRight="85dp"
                android:id="@+id/btnRegistro"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textColor="@color/colorAccent"
                style="@style/Widget.AppCompat.Button.Borderless" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
